--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-avatar": "1.1.0",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -24,6 +25,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toggle-group": "1.1.0",
     "@tabler/icons-react": "^3.11.0",
     "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
@@ -52,7 +54,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
