--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "cmdk": "^1.0.0",
     "framer-motion": "^11.3.23",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -45,6 +45,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tone": "^15.0.2",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
@@ -54,12 +55,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
+    "postcss": "^8.4.41",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
   },
   "prettier": {
