--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "drizzle-orm": "^0.33.0",
     "framer-motion": "^11.3.23",
     "lucide-react": "^0.378.0",
+    "nanoid": "^5.0.7",
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
